--- a/rtorrent.rc
+++ b/rtorrent.rc
@@ -2,6 +2,11 @@
 download_rate = 1024
 upload_rate = 192
 
+# Change the limits, the defaults should be sufficient.
+ratio.min.set=150
+ratio.max.set=300
+ratio.upload.set=100M
+
 # Default directory to save the downloaded torrents.
 directory = ./torrent
 
@@ -13,24 +18,14 @@ session = ./.rtorrent.session
 # Close torrents when diskspace is low.
 schedule = low_diskspace,5,60,close_low_diskspace=4096M
 
-# Watch a directory for new torrents, and stop those that have been
-# deleted.
-#schedule = watch_directory,5,5,load_start=./watch/*.torrent
-#schedule = untied_directory,5,5,stop_untied=
-
 # Enable the default ratio group.
 ratio.enable=
-
-# Change the limits, the defaults should be sufficient.
-ratio.min.set=150
-ratio.max.set=300
-ratio.upload.set=100M
 
 # Port range to use for listening.
 port_range = 6890-6999
 
 # Start opening ports at a random position within the port range.
-#port_random = no
+port_random = yes
 
 # Encryption options, set to none (default) or any combination of the following:
 # allow_incoming, try_outgoing, require, require_RC4, enable_retry, prefer_plaintext
